# Coding-Challenges

./: .gitignore  README.md
connellSequence/: Makefile  README.md
connellSequence/headers/: connellSequence.h
connellSequence/sources/: connellSequence.cpp  main.cpp
diamond_sum/: README.md  diamond_sum.py  test_diamond_sum.py
exitMaze/: Makefile  README.md
exitMaze/headers/: exitMaze.h
exitMaze/sources/: exitMaze.cpp  main.cpp
finding_adjacent_nodes/: README.md  finding_adjacent_nodes.py
hiddenAnagram/: Makefile  README.md
hiddenAnagram/headers/: hiddenAnagram.h
hiddenAnagram/sources/: hiddenAnagram.cpp  main.cpp
largestIsland/: Makefile  README.md
largestIsland/headers/: largestIsland.h
largestIsland/sources/: largestIsland.cpp  main.cpp
longest_alternating_substring/: README.md  longest_alternating_substring.py
maximumSum/: CMakeLists.txt  README.md  maximumSum.cpp
mod10Algorithm/: Makefile  README.md
point_within_triangle/: Makefile  README.md
pokerHandRanking/: Makefile  README.md  pokerHandRanking.cpp
prime_factorization_of_an_integer/: README.md  prime_factorization_of_an_integer.py
prime_factorization_of_integer/: README.md  prime_factorization_of_integer.py
readAbacus/: Makefile  README.md
readTheAbacus/: Makefile  README.md
romanNumerals/: CMakeLists.txt  README.md  romanNumerals.cpp
snake_area_filling/: README.md  snake_area_filling.py
stuttering_function/: README.md  stuttering_function.py
tapCodeTranslation/: Makefile  README.md
the_snake_area_filling/: README.md  the_snake_area_filling.py
(+20 files in other folders)
